k8s/aspirely-app-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspirely-app-frontend
spec:
  selector:
    app: aspirely-app-frontend
  ports:
    - port: 80
      targetPort: 3000
