k8s/aspirely-app-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspirely-app-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.aspirely.edu.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aspirely-app-frontend
                port:
                  number: 80
